src/styles/global.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,300;0,400;0,500;1,300;1,500&display=swap');

:root {
  font-family: 'Source Code Pro', monospace;
}

twitter-widget {
  margin: 0 auto;
}

